more folder restructuring

--- a/applications/miniaero/foundations/aeromini_foundations.ipynb
+++ b/applications/miniaero/foundations/aeromini_foundations.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from foundations.projectables import ProjectableModel, ProjectableIntersection\n",
-    "from foundations.projectables import merge_with_coupling, feedback,feed_forward\n",
+    "from engine.foundations.projectables import ProjectableModel, ProjectableIntersection\n",
+    "from engine.foundations.projectables import merge_with_coupling, feedback,feed_forward\n",
     "from modeling.compute import create_vars\n",
     "import numpy as np\n",
     "from numpy import pi"
@@ -87,11 +87,11 @@
     {
      "data": {
       "text/plain": [
-       "{C_L: 10.406504065040641,\n",
-       " Re: 691011.235955056,\n",
-       " C_f: 0.005027298793072368,\n",
-       " C_D: 3.6062056097889377,\n",
-       " D: 2217.8164500201965}"
+       "{C_L: 10.406503677368164,\n",
+       " Re: 691011.25,\n",
+       " C_f: 0.005027298349887133,\n",
+       " C_D: 3.606205463409424,\n",
+       " D: 2217.81640625}"
       ]
      },
      "execution_count": 4,
@@ -121,16 +121,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{W: 6415.7614501678045}"
+       "{W: 6415.76171875}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,22 +150,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{W: 6415.7614501678045,\n",
-       " Ww: 1475.761450167805,\n",
-       " C_L: 10.432132439297233,\n",
-       " Re: 691011.235955056,\n",
-       " C_f: 0.005027298793072368,\n",
-       " C_D: 3.6239135990896294,\n",
-       " D: 2228.706863440122}"
+       "{W: 6415.76171875,\n",
+       " Ww: 1475.761474609375,\n",
+       " C_L: 10.432132720947266,\n",
+       " Re: 691011.25,\n",
+       " C_f: 0.005027298349887133,\n",
+       " C_D: 3.6239137649536133,\n",
+       " D: 2228.70703125}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
