--- a/applications/sellar_opt/sellar_gen3.ipynb
+++ b/applications/sellar_opt/sellar_gen3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e336401a-88b1-4773-9224-8b53e59c4b13",
    "metadata": {
     "execution": {
@@ -24,9 +24,9 @@
     "from modeling.gen3.nesting import Model, adda, addf, setsolvefor\n",
     "from graph.operators import sort_scc, reorder_merge_solve\n",
     "from graph.workflow import get_f, OPT, NEQ, OBJ, order_from_tree, default_solver_options, mdao_workflow\n",
-    "from solver.workflow_mdao import mdao_workflow_with_args\n",
-    "from solver.assembly import build_archi\n",
-    "from solver.runpipeline import nestedform_to_mdao\n",
+    "from engine.gen2mdao.workflow_mdao import mdao_workflow_with_args\n",
+    "from engine.gen2mdao.assembly import build_archi\n",
+    "from engine.gen2mdao.runpipeline import nestedform_to_mdao\n",
     "import openmdao.api as om\n",
     "from sympy import exp"
    ]
