--- a/minimdo/test_modeling/gen2/test_restructure.ipynb
+++ b/minimdo/test_modeling/gen2/test_restructure.ipynb
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5541a584",
    "metadata": {},
    "outputs": [],
    "source": [
     "from modeling.compute import Var\n",
-    "from modeling.execution import Component\n",
-    "from modeling.execution import edges_from_components\n",
+    "from modeling.gen2.execution import Component\n",
+    "from modeling.gen2.execution import edges_from_components\n",
     "from graph.graphview import digraph_repr, bipartite_repr\n",
     "from graph.graphview import drawbipartite\n",
     "from graph.matrixview import render_incidence\n",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "d485bb46",
    "metadata": {},
    "outputs": [],
@@ -238,10 +238,10 @@
     "from graph.graphutils import edges_E, all_variables, sources\n",
     "from graph.operators import reformulate\n",
     "from graph.workflow import get_f\n",
-    "from modeling.transformations import transform_components\n",
-    "from foundations.functionalsets import FunctionalComp\n",
-    "from foundations.functionalsets import ResidualSet\n",
-    "from foundations.functionalsets import FeedForwardSolver"
+    "from modeling.gen2.transformations import transform_components\n",
+    "from engine.foundations.functionalsets import FunctionalComp\n",
+    "from engine.foundations.functionalsets import ResidualSet\n",
+    "from engine.foundations.functionalsets import FeedForwardSolver"
    ]
   },
   {
