--- a/minimdo/test_modeling/gen4/test_arghandling.ipynb
+++ b/minimdo/test_modeling/gen4/test_arghandling.ipynb
@@ -2,42 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from modeling.arghandling import flatten_args, unflatten_args\n",
-    "from modeling.arghandling import encode, decode, Encoding, EncodedFunction\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = [1, np.array([1,2]), np.array([[4.,5],[6,7]])]"
+    "from modeling.gen4.arghandling import flatten_args, unflatten_args, encode, decode\n",
+    "from modeling.gen4.compute import Encoding, EncodedFunction\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'a': array([1., 2., 3.])}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "{'a': np.array([1,2,3.])}"
+    "x = [1, np.array([1,2]), np.array([[4.,5],[6,7]])]"
    ]
   },
   {
@@ -48,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "dtype('float64')"
+       "{'a': array([1., 2., 3.])}"
       ]
      },
      "execution_count": 4,
@@ -57,7 +37,7 @@
     }
    ],
    "source": [
-    "np.array([1,2,3.]).dtype"
+    "{'a': np.array([1,2,3.])}"
    ]
   },
   {
@@ -68,10 +48,30 @@
     {
      "data": {
       "text/plain": [
-       "DeviceArray([1., 1., 2., 4., 5., 6., 7.], dtype=float32)"
+       "dtype('float64')"
       ]
      },
      "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([1,2,3.]).dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([1., 1., 2., 4., 5., 6., 7.], dtype=float32)"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "        [6., 7.]]))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "DeviceArray([3, 4, 5, 6, 7, 1], dtype=int32)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        " 'a': 1.0}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "(1, 2, 3)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,32 +198,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "dict_in_dict_out = lambda d: Eout.decode(f(*Ein.encode(d)))\n",
     "dict_in_flat_out = lambda d: flatten_args(f(*Ein.encode(d)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(6.135335283236612, array([1, 2, 3]))"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f(*Ein.encode({'x': 1, 'y': 2, 'z': 3}))"
    ]
   },
   {
@@ -234,7 +214,7 @@
     {
      "data": {
       "text/plain": [
-       "{'a': 6.135335283236612, 'b': array([1, 2, 3])}"
+       "(6.135335283236612, array([1, 2, 3]))"
       ]
      },
      "execution_count": 14,
@@ -243,7 +223,7 @@
     }
    ],
    "source": [
-    "dict_in_dict_out({'x': 1, 'y': 2, 'z': 3})"
+    "f(*Ein.encode({'x': 1, 'y': 2, 'z': 3}))"
    ]
   },
   {
@@ -254,10 +234,30 @@
     {
      "data": {
       "text/plain": [
-       "DeviceArray([6.1353354, 1.       , 2.       , 3.       ], dtype=float32)"
+       "{'a': 6.135335283236612, 'b': array([1, 2, 3])}"
       ]
      },
      "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_in_dict_out({'x': 1, 'y': 2, 'z': 3})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([6.1353354, 1.       , 2.       , 3.       ], dtype=float32)"
+      ]
+     },
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "{'a': 6.135335445404053, 'b': array([1., 2., 3.])}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
        "{1: 'A', 2: 'B', 3: 'C'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,16 +378,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'a': 6.135335283236612, 'b': array([1, 2, 3])}"
+       "{'a': DeviceArray([6.1353354], dtype=float32),\n",
+       " 'b': DeviceArray([1., 2., 3.], dtype=float32)}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,16 +409,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x_3': 6.135335283236612, 'x_4': array([1, 2, 3])}"
+       "{'x_3': DeviceArray([6.1353354], dtype=float32),\n",
+       " 'x_4': DeviceArray([1.], dtype=float32)}"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,16 +439,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'a': 6.135335283236612, 'b': array([1, 2, 3])}"
+       "{'a': DeviceArray([6.1353354], dtype=float32),\n",
+       " 'b': DeviceArray([1.], dtype=float32)}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
