fixing old code

--- a/minimdo/dev/validation/v2/al_inputopt.ipynb
+++ b/minimdo/dev/validation/v2/al_inputopt.ipynb
@@ -10,13 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c8759526",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modeling.compute import Var\n",
-    "from modeling.gen1.compute import Evaluable\n",
+    "from src.v1.symbolic import Var\n",
+    "from src.v1.execution import Evaluable\n",
     "a,b,c,d = Var('a'), Var('b'), Var('c'), Var('d')\n",
     "eqlist = [(b,c+1),(a,b-2),(a,2*d+3)]\n",
     "eqs = {idx: eq for idx, eq in enumerate(eqlist)}\n",
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4fad70b1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import openmdao.api as om\n",
-    "from problemgen.gen1.openmdao import Impcomp"
+    "from src.v1.mdaocomps import Impcomp"
    ]
   },
   {
@@ -67,12 +67,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f33c5119",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trash.inputresolver import eqvars, default_out, getallvars, var_matched_cons, invert_edges\n",
+    "from src.v1.inputresolver import eqvars, default_out, getallvars, invert_edges\n",
     "from graph.graphview import bipartite_repr"
    ]
   },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5820d727",
    "metadata": {
     "execution": {
@@ -149,7 +149,8 @@
    "outputs": [],
    "source": [
     "import gurobipy as gp\n",
-    "from gurobipy import GRB"
+    "from gurobipy import GRB\n",
+    "from src.v1.presolver import var_matched_cons"
    ]
   },
   {
