--- a/minimdo/dev/validation/v2/ds_notation.ipynb
+++ b/minimdo/dev/validation/v2/ds_notation.ipynb
@@ -248,12 +248,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "fee184be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from presolver.tearing import min_arc_set_assign\n",
+    "from src.v2.tearing import min_arc_set_assign\n",
     "from graph.operators import invert_edges,default_tree\n",
     "from graph.graphutils import all_variables, all_edges"
    ]
