--- a/minimdo/dev/validation/v2/test_matching.ipynb
+++ b/minimdo/dev/validation/v2/test_matching.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trash.inputresolver import eqvars, default_out, getallvars, var_matched_cons, invert_edges\n",
+    "from src.v1.inputresolver import eqvars, default_out, getallvars, var_matched_cons, invert_edges\n",
+    "from src.v1.presolver import var_matched_cons\n",
     "from graph.graphview import bipartite_repr\n",
-    "from modeling.compute import Var\n",
+    "from src.v1.symbolic import Var\n",
     "import gurobipy as gp\n",
     "from gurobipy import GRB"
    ]
