--- a/minimdo/dev/validation/v4/test_workflow_force_order.ipynb
+++ b/minimdo/dev/validation/v4/test_workflow_force_order.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ab59042e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modeling.compute import Var\n",
-    "from modeling.gen4.couplingapi import Subproblem, intersection\n",
-    "from modeling.gen2.execution import edges_from_components\n",
+    "from src.v1.symbolic import Var\n",
+    "from src.v2.execution import edges_from_components\n",
+    "from src.v4.problem import Subproblem, intersection\n",
     "from graph.matrixview import render_incidence\n",
     "from graph.graphutils import flat_graph_formulation, VAR, COMP, SOLVER\n",
     "from graph.graphutils import draw_graph_graphical_props"
