--- a/minimdo/dev/validation/v5/problem.ipynb
+++ b/minimdo/dev/validation/v5/problem.ipynb
@@ -128,13 +128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modeling.gen6.api import ConstraintSystem, symbolic\n",
-    "from engine.torchengine import ipoptsolver\n",
-    "from engine.torchdata import print_formatted_table\n",
+    "from src.v4.torchdata import print_formatted_table\n",
+    "from src.v4.torchengine import ipoptsolver\n",
+    "from src.v6.problem import ConstraintSystem, symbolic\n",
     "import numpy as np\n",
     "np.set_printoptions(formatter={'float': lambda x: \"{:0.2f}\".format(x).rstrip('0').rstrip('.')})"
    ]
