--- a/minimdo/dev/validation/v2/heuristictear.ipynb
+++ b/minimdo/dev/validation/v2/heuristictear.ipynb
@@ -2,34 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "708cd76f-7d81-4338-92ba-e3ecad38d234",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-04-27T16:25:18.525123Z",
-     "iopub.status.busy": "2022-04-27T16:25:18.525123Z",
-     "iopub.status.idle": "2022-04-27T16:25:18.540205Z",
-     "shell.execute_reply": "2022-04-27T16:25:18.539627Z",
-     "shell.execute_reply.started": "2022-04-27T16:25:18.525123Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\johan\\github\\designresolver\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd .."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "d6e87953-903a-4891-babc-a8638325ba7d",
    "metadata": {
     "execution": {
@@ -43,18 +16,19 @@
    },
    "outputs": [],
    "source": [
-    "from testproblems import generate_random_prob\n",
-    "from representations import bipartite_repr\n",
-    "from inputresolver import resolve,invert_edges,getallvars,direct_eqs\n",
-    "from polycasebuilder import eqv_to_edges_tree\n",
-    "from graphutils import flat_graph_formulation, draw_graph_graphical_props\n",
-    "from operators import sort_scc\n",
+    "from utils.randomstructure import generate_random_prob\n",
+    "from graph.graphview import bipartite_repr\n",
+    "from src.v1.inputresolver import invert_edges,getallvars,direct_eqs\n",
+    "from src.v1.presolver import resolve\n",
+    "from src.v1tree.notation import sort_scc\n",
+    "from graph.operators import eqv_to_edges_tree\n",
+    "from graph.graphutils import flat_graph_formulation, draw_graph_graphical_props\n",
     "#from networkx.algorithms.bipartite import random_graph as bipartite_random_graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "bab21127-a333-46e8-8b50-9be2620f8785",
    "metadata": {
     "execution": {
@@ -75,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "06832d5a-aecc-45ab-b26f-e79681779992",
    "metadata": {
     "execution": {
@@ -94,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 4,
    "id": "52cf66a2-1f37-48ac-a4bb-686bf3cb2830",
    "metadata": {
     "execution": {
@@ -122,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 6,
    "id": "a5ed8133-c38c-4629-941f-e0bd2ed48a1a",
    "metadata": {
     "execution": {
@@ -136,12 +110,12 @@
    },
    "outputs": [],
    "source": [
-    "edges, tree = eqv_to_edges_tree(eqv, output_set, n_eqs)"
+    "edges, tree, _ = eqv_to_edges_tree(eqv, output_set, n_eqs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 7,
    "id": "bdbaa16d-0496-4848-929e-6b54f0d996b5",
    "metadata": {
     "execution": {
@@ -163,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 8,
    "id": "7b22307f-c67a-406e-9780-affbd2987b27",
    "metadata": {
     "execution": {
@@ -182,7 +156,7 @@
        "EdgeView([(1, 2), (2, 3)])"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 9,
    "id": "efee099d-6e20-43d8-a0d1-16bce53a1ea8",
    "metadata": {
     "execution": {
@@ -218,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 10,
    "id": "c2f3a7b5-0c1c-4329-ba85-fdadc08e1837",
    "metadata": {
     "execution": {
@@ -254,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 11,
    "id": "dde933b1-4bb5-4c85-bc4c-5ee96348666a",
    "metadata": {
     "execution": {
@@ -274,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 12,
    "id": "e75ddd88-36dc-49b1-873b-4b5fd4665155",
    "metadata": {
     "execution": {
@@ -290,12 +264,12 @@
     {
      "data": {
       "text/plain": [
-       "{(8, (23, 30, 20, 44)),\n",
-       " (11, (26, 23, 34, 20)),\n",
-       " (17, (21, 25, 26, 23, 30, 38, 31, 35, 29))}"
+       "{(15, (42, 43, 31, 32, 35, 37, 24, 29)),\n",
+       " (17, (21, 25, 26, 23, 38, 31, 35, 37, 29)),\n",
+       " (18, (38, 24, 40, 44))}"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 13,
    "id": "535b7371-39be-4cc9-8323-d3613ab83e44",
    "metadata": {
     "execution": {
@@ -318,7 +292,19 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "dir_graph() missing 1 required positional argument: 'selected'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [13]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m dedges \u001b[38;5;241m=\u001b[39m \u001b[43mdir_graph\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgraph_edges\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43masg\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: dir_graph() missing 1 required positional argument: 'selected'"
+     ]
+    }
+   ],
    "source": [
     "dedges = dir_graph(graph_edges, asg)"
    ]
@@ -927,9 +913,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mdo]",
+   "display_name": "minimdo",
    "language": "python",
-   "name": "conda-env-mdo-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -941,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
